# LSTM2RL-SynthCryptoMarketMaker

./: .gitignore  README.md  config.env  config.json  pyproject.toml
data/: orderbook_generator.pth  trades_df.parquet
data/models/: orderbook_generator.pth  trades_generator.pth
src/: constants.py  main.py  strategy.py
src/classes/: market_maker.py  orderbook_generator.py  plotter.py  trades_generator.py
src/data/: loader.py  processer.py
src/helpers/: charts.py  configurator.py  data_handler.py  data_loader.py
src/models/: orderbook_generator.py  trades_generator.py
