[tool.poetry]
name = "LSTM2RL-SynthCryptoMarketMaker"
version = "0.1.0"
description = "A personal research project to explore financial crypto markets, deep neural networks, and reinforcement learning algorithms."
authors = ["luca-nik <luca.nicoli.engineer@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
pyarrow = "^18.0.0"
matplotlib = "^3.9.2"
mplfinance = "^0.12.10-beta.0"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
scikit-learn = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
